@@ -266,6 +266,31 @@ class ArtifactExtraField extends Error {
 			7=>$Language->getText('tracker_admin_build_boxes','box_type_status')
 		);
 	}
+	
+	/**
+	 *	getAlias - the alias that is used for this field
+	 *
+	 *	@return	string	alias
+	 */
+	function getAlias() {
+		return $this->data_array['alias'];
+	}
+	
+	/**
+	 *	getAvailableValues - Get the list of available values for this extra field
+	 *
+	 *	@return array
+	 */
+	function getAvailableValues() {
+		$sql = "SELECT * FROM artifact_extra_field_elements WHERE extra_field_id=".$this->getID();
+		$res = db_query($sql);
+		
+		$return = array();
+		while ($row = db_fetch_array($res)) {
+			$return[] = $row;
+		}
+		return $return;
+	}
 
 	/**
 	 *  update - update a row in the table used to store box names 
@@ -277,9 +302,12 @@ class ArtifactExtraField extends Error {
 	 *	@param	int	Attribute1 - for text (size) and textarea (rows)
 	 *	@param	int	Attribute2 - for text (maxlength) and textarea (cols)
 	 *	@param	int	is_required - true or false whether this is a required field or not.
+	 *	@param	string	Alias for this field
 	 *  @return	boolean	success.
 	 */
-	function update($name,$attribute1,$attribute2,$is_required=0) {
+	function update($name,$attribute1,$attribute2,$is_required=0,$alias="") {
+		global $Language;
+
 		if (!$this->ArtifactType->userIsAdmin()) {
 			$this->setPermissionDeniedError();
 			return false;
@@ -295,13 +323,58 @@ class ArtifactExtraField extends Error {
 			$is_required=1;
 		} else {
 			$is_required=0;
-		}	
+		}
+		
+		// these are reserved alias names
+		$reserved_alias = array(
+			"project",
+			"type",
+			"priority",
+			"assigned_to",
+			"summary",
+			"details"
+		);
+		
+		// alias validation
+		if (strlen($alias) == 0) {
+			$this->setError($Language->getText('tracker_admin_build_boxes','required_alias'));
+			return false;
+		} else if (strlen($alias) > 0) {
+			$alias = strtolower(trim($alias));
+			
+			// invalid chars?
+			if (preg_match("/[^[:alnum:]_\\-]/", $alias)) {
+				$this->setError($Language->getText('tracker_admin_build_boxes','invalid_alias'));
+				return false;
+			} else if (in_array($alias, $reserved_alias)) {	// alias is reserved?
+				$this->setError($Language->getText('tracker_admin_build_boxes','reserved_alias', array($alias)));
+				return false;
+			} else {
+				// check if the name conflicts with another alias in the same artifact type
+				
+				$sql = "SELECT * FROM artifact_extra_field_list ".
+						"WHERE LOWER(alias)='".$alias."' AND ".
+						"group_artifact_id=".$this->ArtifactType->getID()." AND ".
+						"extra_field_id <> ".$this->getID();
+				$res = db_query($sql);
+		
+				if (!$res) {
+					$this->setError(db_error());
+					return false;
+				} else if (db_numrows($res) > 0) {
+					$this->setError($Language->getText('tracker_admin_build_boxes','conflicting_alias', array($alias)));
+					return false;
+				}
+			}
+		}
+		
 		$sql="UPDATE artifact_extra_field_list 
 			SET 
 			field_name='".htmlspecialchars($name)."',
 			attribute1='$attribute1',
 			attribute2='$attribute2',
-			is_required='$is_required'
+			is_required='$is_required',
+			alias='$alias'
 			WHERE extra_field_id='". $this->getID() ."' 
 			AND group_artifact_id='".$this->ArtifactType->getID()."'";
 		$result=db_query($sql);
